Chapter_03_More_Building_Blocks/2.04/todo-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-vol
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-app
          image: bachthyaglx/todo-app:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: image-vol
              mountPath: /usr/src/app/data
